# sitebuilder

./: .gitignore  README.rst  css_update.py  desktop-install  desktop-uninstall  gsitebuilder.py  header_merge.py  img_update.py  index_create.py  js_update.py  meson.build  schema-install  schema-install.sh  schema-uninstall  schema-uninstall.sh  sitebuilder-gtk.public  sitebuilder-gtk.py  sitebuilder.py  statlog.py  uk.co.archaicgroves.gsitebuilder.gschema.xml  uk.co.archaicgroves.sitebuilder-gtk.desktop  uk.co.archaicgroves.sitebuilder-gtk.gschema.xml
sitebuilder/: __init__.py  css_update.py  header_merge.py  img_update.py  index_create.py  js_update.py  meta_update.py
text/: INSTALL  LICENSE
