project('Sitebuilder', 'c', version : '1.0.0')


python_dep = find_program('python3')

## Can't think how to do this
#gtk_dep = dependency('python3-gi')
#gtk_dep = find_program('GLib.py')



run_target('schema-uninstall', command : 'schema-uninstall.sh')
run_target('schema-install', command : 'schema-install.sh')



